objects/Contact.object
<CustomObject><fields>
        <fullName>Broker_Dealer_Code__c</fullName>
        <label>Broker Dealer Code</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Broker_Dealer_Id__c</fullName>
        <label>Broker Dealer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Broker_Dealer_Name__c</fullName>
        <label>Broker Dealer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Business_Type__c</fullName>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Variable</fullName>
                </value>
                <value>
                    <fullName>Non-Variable</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>LTC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Contracted</fullName>
                </value>
                <value>
                    <fullName>Non-Contracted</fullName>
                </value>
                <value>
                    <fullName>Appoint-Only</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FP_Segment_Type__c</fullName>
        <label>FP Segment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commissionable Generalist</fullName>
                </value>
                <value>
                    <fullName>Fee Only</fullName>
                </value>
                <value>
                    <fullName>Hybrid Generalist</fullName>
                </value>
                <value>
                    <fullName>Insurance Focused Professional</fullName>
                </value>
                <value>
                    <fullName>Insurance Specialist</fullName>
                </value>
                <value>
                    <fullName>Unknown Segment</fullName>
                </value>
                <value>
                    <fullName>Unmatched</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Fallen_Angels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fallen Angels</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>2</scale>
        <type>Location</type>
    </fields><fields>
        <fullName>Global_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Opt Out</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Hard_Bounce__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hard Bounce</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ISP_Rep_Type__c</fullName>
        <label>ISP Rep Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appointed</fullName>
                </value>
                <value>
                    <fullName>Producing</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>LIDEmailOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LIDEmailOptOut</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>MF_Rep_Type__c</fullName>
        <label>MF Rep Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appointed</fullName>
                </value>
                <value>
                    <fullName>Questionable</fullName>
                </value>
                <value>
                    <fullName>Former Producer</fullName>
                </value>
                <value>
                    <fullName>Producing</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Registered Investment Advisor (RIA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>PA__c</fullName>
        <label>PA</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>RIA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RIA</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>RSDEmailOptOut__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RSDEmailOptOut</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Rep_NPN__c</fullName>
        <label>Rep NPN</label>
        <length>100</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>LID</fullName>
                </value>
                <value>
                    <fullName>RSD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
                <value>
                    <fullName>Deceased</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>TA_Rep_Type__c</fullName>
        <label>TA Rep Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Appointed</fullName>
                </value>
                <value>
                    <fullName>Questionable</fullName>
                </value>
                <value>
                    <fullName>Producing</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Lapsed</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Registered Investment Advisor (RIA)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Producer</fullName>
                </value>
                <value>
                    <fullName>Office Staff</fullName>
                </value>
                <value>
                    <fullName>Other, DNR (Do Not Re-contact)</fullName>
                </value>
                <value>
                    <fullName>Life Insurance Specialist (LIS)</fullName>
                </value>
                <value>
                    <fullName>Hybrid Generalists</fullName>
                </value>
                <value>
                    <fullName>Registered Investment Advisor (RIA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields><fields>
        <fullName>X1__c</fullName>
        <label>1</label>
        <length>40</length>
        <type>Text</type>
    </fields><fields>
        <fullName>X2__c</fullName>
        <label>2</label>
        <length>40</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><recordTypeTrackFeedHistory>false</recordTypeTrackFeedHistory><sharingModel>Private</sharingModel><listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews><listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews></CustomObject>